<resources>
    <string name="app_name">IMC</string>
    <string name="todo">TODO</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="recherche">Recherche</string>
    <string name="a_propos">A propos</string>
    <string name="param_tre">Paramétre</string>
    <string name="partager">Partager</string>
    <string name="connexion">Connexion</string>
    <string name="accueil">Accueil</string>
    <string name="cr_er_un_compte">Créer Un Compte</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="ann_e_de_naissance">Année de naissance</string>
    <string name="_1995">1995?</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="cr_er">Créer</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié?</string>
    <string name="cr_er_un_compt">Créer un compte</string>
    <string name="envoyermonmotdepasse">Envoyermonmotdepasse</string>
    <string name="chercher">Chercher</string>
    <string name="les_mots_existants">Les Mots Existants</string>
    <string name="reset">Reset</string>
    <string name="choisir_la_date_de_naissance">Choisir la date de naissance</string>
    <string name="votre_poid_en_kg">votre poid en kg :</string>
    <string name="votre_taille_en_cm">votre taille en cm :</string>
    <string name="votre_imc_en_kg_m_2">votre IMC en kg  m^2</string>
    <string name="obtenir_votre_conseil">Obtenir votre Conseil</string>
    <string name="le_r_gime_v_g_talien_ou_alimentation_v_gane_consiste_liminer_tous_les_aliments_d_origine_animale_viande_poisson_crustac_s_mais_aussi_la_diff_rence_du_r_gime_v_g_tarien_les_oeufs_les_produits_laitiers_et_le_miel_il_est_surtout_pratiqu_pour_des_raisons_thiques_de_sant_et_cologiques_par_d_finition_le_r_gime_v_g_talien_est_un_mode_de_vie_plus_qu_un_r_gime">Le régime végétalien ou alimentation végane consiste à éliminer tous les aliments d\'origine animale : viande, poisson, crustacés mais aussi (à la différence du régime végétarien) les oeufs, les produits laitiers et le miel. Il est surtout pratiqué pour des raisons éthiques, de santé et écologiques.Par définition, le régime végétalien est un mode de vie plus qu\'un régime.</string>
    <string name="r_gime_m_diterran_en">régime méditerranéen</string>
    <string name="r_gime_anticholost_rol">Régime anticholostérol</string>
    <string name="r_gime_v_g_tarien">régime végétarien</string>
    <string name="r_gime_d_tox">Régime détox</string>
    <string name="r_gime_dash">Régime dash</string>
    <string name="r_gime_sans_glutan">Régime sans Glutan</string>
    <string name="programme_alimentaire">Programme Alimentaire</string>
    <string name="un_r_gime_sans_gluten_est_un_r_gime_alimentaire_excluant_les_aliments_base_de_gluten_qui_est_un_compos_prot_ique_retrouv_dans_de_nombreuses_c_r_ales_comme_le_bl_l_orge_ou_le_seigle">Un régime sans gluten est un régime alimentaire excluant les aliments à base de gluten, qui est un composé protéique retrouvé dans de nombreuses céréales comme le blé, l\'orge ou le seigle</string>
    <string name="un_r_gime_antichol_strole_consiste_a_viter_la_consomation_des_aliments_pleins_de_chol_sterol">un régime anticholéstrole consiste a éviter la consomation des aliments pleins de cholésterol.</string>
    <string name="le_r_gime_m_diterran_en_galement_appel_r_gime_cr_tois_ou_di_te_m_diterran_enne_est_caract_ris_e_par_la_consommation_en_abondance_de_fruits_l_gumes_l_gumineuses_c_r_ales_herbes_aromatiques_et_d_huile_d_olive_une_consommation_mod_r_e_de_produits_laitiers_d_origine_vari_e_ch_vre_et_brebis_essentiellement_et_issus_de_la_vache_dans_une_moindre_mesure_d_ufs_et_de_vin_une_consommation_limit_e_de_poisson_et_une_consommation_faible_de_viande">Le régime méditerranéen, également appelé régime crétois ou diète méditerranéenne est caractérisée par la consommation en abondance de fruits, légumes, légumineuses, céréales, herbes aromatiques et d\'huile d\'olive, une consommation modérée de produits laitiers d\'origine variée (chèvre et brebis essentiellement et issus de la vache dans une moindre mesure), d\'œufs et de vin, une consommation limitée de poisson et une consommation faible de viande</string>
    <string name="un_r_gime_d_tox_est_un_type_de_traitement_de_m_decine_alternative_qui_vise_d_barrasser_le_corps_des_toxines_non_sp_cifi_es_substances_qui_selon_les_promoteurs_se_sont_accumul_es_dans_le_corps_et_ont_des_effets_ind_sirables_court_ou_long_terme_sur_la_sant_individuelle">un régime détox est un type de traitement de médecine alternative qui vise à débarrasser le corps des toxines non spécifiées - substances qui, selon les promoteurs, se sont accumulées dans le corps et ont des effets indésirables à court ou à long terme sur la santé individuelle.</string>
    <string name="le_r_gime_dash_est_un_r_gime_alimentaire_pour_neutraliser_et_r_duire_l_hypertension_art_rielle">Le régime DASH est un régime alimentaire pour neutraliser et réduire l\'hypertension artérielle</string>
    <string name="r_gime_alimentaire">Régime alimentaire</string>
    <string name="choisir_un_type">Choisir un type</string>
    <string name="un_r_gime_alimentaire_se_d_finit_quantativement_par_le_nombre_total_de_calorie_et_par_le_pourcentage_de_calorie_provenant_de_trois_lement_fondamentaux_glucides_lipides_et_protides">un régime alimentaire se définit quantativement par le nombre total de calorie et par le pourcentage de calorie provenant de trois élement fondamentaux :glucides,lipides et protides</string>
    <string name="n_exclut_que_la_viande_il_autorise_le_poisson_les_ufs_et_les_produits_laitiers">n’exclut que la viande. Il autorise le poisson, les œufs et les produits laitiers.</string>
    <string name="l_ovo_v_g_tarien">L’ovo-végétarien</string>
    <string name="exclut_tous_les_produits_animaux_sauf_les_ufs">exclut tous les produits animaux, sauf les œufs.</string>
    <string name="le_lacto_v_g_tarien">Le lacto-végétarien</string>
    <string name="exclut_les_produits_animaux_y_compris_les_ufs_mais_autorise_les_laitages">exclut les produits animaux, y compris les œufs, mais autorise les laitages.</string>
    <string name="le_pesco_v_g_tarien">Le pesco-végétarien</string>
    <string name="salade_grecque_de_tomates_avocats_et_crevettes">Salade-grecque-de-tomates-avocats-et-crevettes</string>
    <string name="salade_de_poulet_grille_et_legumes">Salade-de-poulet-grille-et-legumes</string>
    <string name="poisson_roti_a_la_mediterraneenne">Poisson-roti-a-la-mediterraneenne</string>
    <string name="brochettes_de_pasteque_et_halloumi">Brochettes-de-pasteque-et-halloumi</string>
    <string name="la_betterave_renferme_de_la_m_thionine_qui_aide_le_corps_traiter_les_d_chets_de_l_organisme_et_de_la_b_tanine_qui_aide_le_foie_m_taboliser_les_acides_gras">La betterave renferme de la méthionine qui aide le corps à traiter les déchets de l’organisme, et de la bétanine qui aide le foie à métaboliser les acides gras.</string>
    <string name="la_betterave">La betterave</string>
    <string name="la_pomme_contient_de_la_pectine_une_fibre_qui_permet_l_excr_tion_des_toxines_et_gonfle_dans_l_estomac_au_contact_des_liquides_s_y_trouvant_ce_qui_contribue_au_sentiment_de_sati_t">La pomme contient de la pectine, une fibre qui permet l’excrétion des toxines et gonfle dans l’estomac au contact des liquides s’y trouvant, ce qui contribue au sentiment de satiété.</string>
    <string name="la_pomme">La pomme</string>
    <string name="le_tefou_riche_en_prot_ines_v_g_tales_le_tofu_peut_remplacer_la_viande_pendant_la_cure_de_d_tox_il_rassasie_rapidement_am_liore_la_digestion_et_aide_l_organisme_excr_ter_ses_toxines">le tefou Riche en protéines végétales, le tofu peut remplacer la viande pendant la cure de détox. Il rassasie rapidement, améliore la digestion et aide l’organisme à excréter ses toxines.</string>
    <string name="boulettes_light_a_la_libanaise_et_sauce_au_yahourt_allege">boulettes-light-a-la-libanaise-et-sauce-au-yahourt-allege</string>
    <string name="spaghetti_au_brocoli_et_sardines">spaghetti-au-brocoli-et-sardines</string>
    <string name="lentilles_a_la_marocaine">lentilles-a-la-marocaine</string>
    <string name="salade_au_saumon">salade-au-saumon</string>
    <string name="poke_bowl_au_thon">poke-bowl-au-thon</string>
    <string name="puree_d_avocat">puree-d-avocat</string>
    <string name="imc">IMC</string>
    <string name="r_gime">Régime</string>
    <string name="imc_30_ob_sit"><![CDATA[IMC > 30 : obésité]]></string>
    <string name="votre_poids_est_trop_lev_par_rapport_votre_taille_du_point_de_vue_m_dical_l_ob_sit_est_un_exc_s_de_masse_grasse_ayant_des_cons_quences_sur_la_sant_l_exc_s_de_poids_entra_ne_un_risque_accru_de_maladies_m_taboliques_diab_te_cardiaques_respiratoires_articulaires_et_de_cancer">Votre poids est trop élevé par rapport à votre taille. Du point de vue médical, l\'obésité est un excès de masse grasse ayant des conséquences sur la santé. L\'excès de poids entraîne un risque accru de maladies métaboliques (diabète), cardiaques, respiratoires, articulaires et de cancer.</string>
    <string name="surpoids">surpoids</string>
    <string name="votre_poids_commence_devenir_trop_lev_par_rapport_votre_taille_a_long_terme_un_indice_de_masse_corporel_imc_lev_a_des_cons_quences_sur_la_sant_l_exc_s_de_poids_entra_ne_un_risque_accru_de_maladies_m_taboliques_diab_te_cardiaques_respiratoires_articulaires_et_de_cancer_si_vous_souhaitez_commencer_un_r_gime_pour_perdre_du_poids_parlez_en_au_pr_alable_avec_votre_m_decin_traitant">Votre poids commence à devenir trop élevé par rapport à votre taille. A long terme, un indice de masse corporel (IMC) élevé a des conséquences sur la santé. L\'excès de poids entraîne un risque accru de maladies métaboliques (diabète), cardiaques, respiratoires, articulaires et de cancer. Si vous souhaitez commencer un régime pour perdre du poids, parlez-en au préalable avec votre médecin traitant.</string>
    <string name="poids_normal">poids normal</string>
    <string name="votre_poids_est_adapt_votre_taille_gardez_vos_habitudes_alimentaires_pour_conserver_un_indice_de_masse_corporel_imc_id_al_et_un_poids_qui_vous_assure_un_tat_de_sant_optimal_une_alimentation_quilibr_e_sans_exc_s_de_mati_res_grasses_associ_e_une_activit_physique_r_guli_re_vous_aideront_maintenir_votre_poids_id_al">Votre poids est adapté à votre taille. Gardez vos habitudes alimentaires pour conserver un indice de masse corporel (IMC) idéal et un poids qui vous assure un état de santé optimal. Une alimentation équilibrée, sans excès de matières grasses, associée à une activité physique régulière vous aideront à maintenir votre poids idéal.</string>
    <string name="insuffisance_pond_rale_maigreur">insuffisance pondérale (maigreur)</string>
    <string name="voulez_vous_vraiment">Voulez vous vraiment</string>
    <string name="quitter">quitter?</string>
    <string name="non">Non</string>
    <string name="oui">OUI</string>
    <string name="l_exercice_de_musculation">L\'exercice de musculation.</string>
    <string name="l_exercice_d_tirement">L\'exercice d\'étirement.</string>
    <string name="l_exercice_d_quilibre">L\'exercice d\'équilibre.</string>
    <string name="l_exercice_cardiovasculair">L\'exercice_cardiovasculaire</string>
    <string name="jogging">Jogging</string>
</resources>