<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout3"
    tools:context=".Lougout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/main_toolbar"
            />
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="100dp"
            android:src="@drawable/im3"
            android:contentDescription="@string/todo"
            android:layout_marginStart="100dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginLeft="40dp"
            android:text="@string/voulez_vous_vraiment"
            android:layout_marginStart="40dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginLeft="150dp"
            android:text="@string/quitter"
            android:layout_marginStart="150dp" />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/non"
            android:id="@+id/cancel"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="220dp"
            android:id="@+id/reste"
            android:layout_marginTop="-50dp"
            android:text="@string/oui"
            android:layout_marginStart="220dp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">
        <include
            layout="@layout/main_nav_drawer"
            />
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>