<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layoutRegimeType"
    tools:context=".RegimeType">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/main_toolbar"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/r_gime_m_diterran_en"
            android:id="@+id/regimemedeterrian"
            android:background="@drawable/round1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/r_gime_v_g_tarien"
            android:id="@+id/regimevegeterian"
            android:background="@drawable/round1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/r_gime_anticholost_rol"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/regimesanscholosterol"
            android:textSize="20sp"
            android:background="@drawable/round1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/r_gime_d_tox"
            android:id="@+id/regimedetox"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/round1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/r_gime_dash"
            android:id="@+id/regimedash"
            android:background="@drawable/round1"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/r_gime_sans_glutan"
            android:id="@+id/regimesanssel"
            android:backgroundTint="@color/purple_700"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/round1"
            tools:targetApi="lollipop" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">
        <include
            layout="@layout/main_nav_drawer"
            />
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>

