<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layoutMenuSport"
    tools:context=".MenuSport">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/main_toolbar"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/l_exercice_cardiovasculair"
            android:id="@+id/exercice_cardiovasculaire"
            android:background="@drawable/round1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/l_exercice_de_musculation"
            android:id="@+id/exercice_musculation"
            android:background="@drawable/round1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/l_exercice_d_quilibre"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/exercice_equlibre"
            android:textSize="20sp"
            android:background="@drawable/round1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/l_exercice_d_tirement"
            android:id="@+id/etirement"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/round1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/jogging"
            android:id="@+id/course"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/round1"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">
        <include
            layout="@layout/main_nav_drawer"
            />
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>

